--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,7 @@ nav:
     - Home: index.md
     - Installation: installation.md
     - Usage: usage.md
+    - Configuration profile: config.md
     - Troubleshooting: troubleshooting.md
     
 theme: 
