--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: MUFFIN
 nav:
     - Home: index.md
     - Installation: installation.md
-    - Usage: usage.md
+    - Usage: usage/usage.md
     - Configuration profile: config.md
     - Troubleshooting: troubleshooting.md
     
